<resources>
    <string name="app_name" translatable="false">SoundScape V2</string>
    <string name="login_username">USERNAME</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_sign_in">SIGN IN</string>
    <string name="login_project">Project of Metropolia UAS</string>
    <string name="toast_login_success">Login successful</string>
    <string name="toast_login_fail">Login failed</string>
    <string name="toast_login_connection_fail">Login failed, check out your network</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="search_general_keyword">Try to input a more general keyword</string>
    <string name="search_no_result">No result</string>
    <string name="create_new_soundscape">Create new soundscape</string>
    <string name="toast_press_again_exit">Press again to exit</string>
    <string name="toast_added_later">Will be added later</string>
    <string name="menu_refresh">Refresh</string>
    <string name="search_hint">Search</string>
    <string name="fragment_recording_text">After recording, please go to Library page to use</string>
    <string name="toast_permission_denied">Permission denied</string>
    <string name="toast_repeat_clicked">Repeat clicked</string>
    <string name="toast_shuffle_clicked">Shuffle clicked</string>
    <string name="your_soundscapes">Your soundscapes</string>
    <string name="change_lang">Change language</string>
    <string name="change_lang_tag">fi</string>
    <string name="general_settings"><u>General settings</u></string>
    <string name="night_mode"><u>Night mode</u></string>
    <string name="language"><u>Language</u></string>
    <string name="delete_settings"><u>File settings</u></string>
    <string name="delete_files"><u>Delete files</u></string>
    <string name="log_out"><u>Log out</u></string>
    <string name="click_to_logout"><u>Click here to logout</u></string>
    <string name="english"><u>English</u></string>
    <string name="finnish"><u>Finnish</u></string>
    <string name="to_finnish"><u>english</u></string>
    <string name="to_english"><u>finnish</u></string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="delete_option_1"><u>Soundscapes</u></string>
    <string name="delete_title"><u>Choose which files you want to delete:</u></string>
    <string name="delete_option_2"><u>Downloaded audio files</u></string>
    <string name="delete_option_3"><u>Your own recordings</u></string>
    <string name="delete_toast"><u>Files deleted</u></string>
    <string name="choose_language"><u>Choose language: </u></string>
    <string name="language_confirmation"><u>Language set to </u></string>
    <string name="logout_confirmation"><u>Are you sure you want to log out?</u></string>
    <string name="time00" translatable="false">00:00</string>
    <string name="record_delete">Recording deleted successfully!</string>
    <string name="record_save">Recording saved successfully!</string>
    <string name="set_name">Set name:</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="recoring">Recording</string>
    <string name="Library">Library</string>
    <string name="new_soundscape">New Soundscape</string>
    <string name="preference">Preference</string>
</resources>
