<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:scrollingCache="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="15dp"
                    android:text="@string/general_settings"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/modeSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableStart="@drawable/ic_night_mode"
                        android:drawablePadding="10dp"
                        android:text="@string/night_mode"
                        android:textSize="18sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_language_black_24dp"
                        android:drawablePadding="10dp"
                        android:text="@string/language"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/select_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/english"
                        android:textSize="14sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="15dp"
                    android:text="@string/delete_settings"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/delete_soundscapes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_delete_black_24dp"
                        android:drawablePadding="10dp"
                        android:text="@string/delete_files"
                        android:textColor="#000"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="15dp"
                    android:text="@string/log_out"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/logout_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
                        android:drawablePadding="10dp"
                        android:text="@string/click_to_logout"
                        android:textColor="@color/red_600"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</RelativeLayout>